unpackaged/main/default/objects/CIO_Integration_Setting__mdt/CIO_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CIO Integration Setting</label>
    <pluralLabel>CIO Integration Settings</pluralLabel>
</CustomObject>