unpackaged/main/default/objects/CIO_Integration_Setting__mdt/fields/Endpoint_Extension__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Extension__c</fullName>
    <inlineHelpText>Any additional endpoint directory information after the unique identifier.</inlineHelpText>
    <label>Endpoint Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>