unpackaged/main/default/objects/CIO_Integration_Setting__mdt/fields/Endpoint_Method__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Method__c</fullName>
    <label>Endpoint Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>