unpackaged/main/default/objects/CIO_Integration_Setting__mdt/fields/Fields_To_Query__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Query__c</fullName>
    <inlineHelpText>A comma separated list of fields that will be queried.</inlineHelpText>
    <label>Fields To Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>