unpackaged/main/default/objects/CIO_Integration_Setting__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <defaultValue>Null</defaultValue>
    <label>SObject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Application__c</fullName>
            </value>
            <value>
                <fullName>Enrollment_Record__c</fullName>
            </value>
            <value>
                <fullName>Inquiry__c</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>