unpackaged/main/default/objects/CIO_Integration_Setting__mdt/fields/Watch_Fields__c.field-meta.xml
<CustomField>
    <fullName>Watch_Fields__c</fullName>
    <inlineHelpText>A comma separated list of fields to watch for sending update events.</inlineHelpText>
    <label>Watch Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>